# forge

./: .eslintrc.json  .gitignore  .mcp.json  .worktreeinclude  CHANGELOG.md  MIGRATION-GUIDE-v1.2.0.md  MIGRATION_SUMMARY.md  README.md  jest.config.js  package.json  tsconfig.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.fractary/: .gitignore  config.yaml
.fractary/env/: .env.example
.fractary/specs/: SPEC-00026-distributed-plugin-architecture.md  SPEC-20251216-forge-cli-migration.md  SPEC-20251217-forge-mcp-server.md  SPEC-20251217-system-alignment.md  SPEC-FORGE-009-MARKDOWN-FRONTMATTER-FORMAT.md
.pi/: settings.json
.pi/extensions/: claude-code-agent.ts  claude-code-tools.ts  question.ts  questionnaire.ts  todo.ts
cli/: .gitignore  .npmignore  DEBUGGING_SUMMARY.md  README.md  package.json  test-cli.js  test-import.js  test-index-load.js  test-install-imports.js  test-minimal.js  test-progressive-load.js  test-specific.js  tsconfig.json
cli/src/: index-minimal.ts  index.ts
docs/: API.md  ARCHITECTURE.md  DEVELOPER.md  GUIDE.md  MCP_SERVER.md  NAMING-CONVENTIONS.md  README.md  SDK.md
docs/definitions/: EXAMPLES.md  README.md
docs/examples/: advanced-workflows.md  basic-usage.md
docs/guides/: command-reference.md  configuration.md  creating-workflow-plugin-bundles.md  getting-started.md  (+2 more)
examples/: custom-resolver.ts  fork-workflow.ts  update-management.ts
sdk/python/: .gitignore  README.md  pyproject.toml  pytest.ini
sdk/python/examples/: basic_usage.py
sdk/python/fractary_forge/: __init__.py
sdk/python/fractary_forge/config/: __init__.py  config_loader.py
sdk/python/fractary_forge/definitions/: __init__.py
sdk/python/fractary_forge/definitions/api/: __init__.py  agent_api.py  tool_api.py
sdk/python/fractary_forge/errors/: __init__.py  forge_error.py
sdk/python/fractary_forge/logger/: __init__.py  logger.py
sdk/python/fractary_forge/registry/: __init__.py  agent_registry.py  tool_registry.py
sdk/python/fractary_forge/registry/resolvers/: __init__.py  base_resolver.py  global_resolver.py  local_resolver.py  remote_resolver.py
sdk/python/fractary_forge/types/: __init__.py  base_types.py
sdk/python/tests/: __init__.py  test_agent_registry.py  test_naming_convention.py  test_tool_registry.py
specs/: SPEC-00026-distributed-plugin-architecture.md
src/: index.ts
(+535 files in other folders)
